add sout statement in main file and modified .ingr

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+###  ---------------------    ###
+
+src/main/resources/
+
+###  ---------------------    ###
+
+
 ### STS ###
 .apt_generated
 .classpath
@@ -20,7 +27,7 @@ target/
 *.ipr
 
 ### NetBeans ###
-/src/main/resources/
+# src/main/resources/
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -32,3 +39,5 @@ build/
 
 ### VS Code ###
 .vscode/
+# *.properties
+src/main/resources/application.properties
